<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/nav_iptv"
        android:icon="@drawable/ic_tv"
        android:title="@string/tab_iptv" />
    <item
        android:id="@+id/nav_local_media"
        android:icon="@drawable/ic_folder"
        android:title="@string/tab_local_media" />
    <item
        android:id="@+id/nav_downloader"
        android:icon="@drawable/ic_download"
        android:title="@string/tab_downloader" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/tab_settings" />
</menu>
