<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_local_media"
        android:icon="@drawable/ic_video"
        android:title="@string/local_media"
        app:iconTint="@color/accent"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_social_download"
        android:icon="@drawable/ic_download"
        android:title="@string/social_download_title"
        app:iconTint="@color/accent"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_downloads"
        android:icon="@drawable/ic_download"
        android:title="@string/downloads"
        app:iconTint="@color/text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        app:iconTint="@color/text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_iptv"
        android:icon="@drawable/ic_tv"
        android:title="@string/iptv_title"
        app:iconTint="@color/accent"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:iconTint="@color/text"
        app:showAsAction="ifRoom" />
</menu>
